--- a/config.json
+++ b/config.json
@@ -1,12 +1,8 @@
 {
     "port": 8080,
     "consensus":{
-        "mainnet": {
-            "version": "2.9.1"
-        },
-        "testnet": {
-            "version": "2.10.2"
-        }
+        "mainnet": "2.10.2",
+        "testnet": "2.10.2"
     },
     "seed": {
         "mainnet": [
